-Added Spotify login via activity -Update song,songService and gradle

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,12 +29,12 @@ android {
 }
 
 dependencies {
-    implementation project(':spotify-app-remote')
 
     implementation "com.google.code.gson:gson:2.8.5"
      implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+    implementation 'com.spotify.android:auth:1.1.0' // Maven dependency
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
