--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,6 @@ dependencies {
     implementation "com.google.code.gson:gson:2.8.5"
     implementation 'com.android.volley:volley:1.1.1'
      androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'androidx.media:media:1.2.1'
+
 }
