--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,10 @@ android {
     }
 }
 dependencies {
-
+    androidTestImplementation 'androidx.test.espresso:espresso-web:3.1.0'
+    androidTestImplementation 'androidx.test:runner:1.1.0'
+    androidTestImplementation 'androidx.test:rules:1.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     implementation "com.google.code.gson:gson:2.8.5"
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
@@ -49,6 +52,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.spotify.android:auth:1.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    androidTestImplementation 'com.schibsted.spain:barista:3.9.0'
 
     implementation "com.google.code.gson:gson:2.8.5"
     implementation 'com.android.volley:volley:1.1.1'
