--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MeowtifyLight">
         <activity android:name=".activities.SplashActivity"
-            android:theme="@style/Theme.MeowtifyLight.Laucher">
+            android:theme="@style/Theme.MeowtifyLight.Launcher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
